# WallPaper-Calendar

./: .gitignore  LICENSE  README.md  build.py  main.py  pyproject.toml  server.py  test.py
assets/: style.qss  style.qss1
core/: calendar_manager.py
src/core/: calendar_manager.py  client_manager.py
src/ui/: main_window.py  settings_window.py  tray.py
src/utils/: __init__.py  resource_path.py
src/utils/Logger/: logger.py
src/utils/Logger/typings/: FormatRemovalError.py
src/utils/Logger/utils/: _dop.py  _get_frame.py
tests/: test_update_refrash_token.py
ui/: main_window.py
